# agent-examples

./: .env.example  .gitignore  LICENSE  README.md
apps/crewai-fin-agent/: README.md  pyproject.toml
apps/crewai-fin-agent/src/: crew.py  main.py  tools.py
apps/crewai-fin-agent/src/config/: agents.yaml  tasks.yaml
apps/langgraph-fin-agent/: .env.example  README.md  pyproject.toml  specifications.json
apps/langgraph-fin-agent/langgraph_fin_agent/: graph.py  main.py  specifications.py
apps/langgraph-fin-agent/src/: graph.py  main.py  tools.py
apps/swarm-fin-agent/: pyproject.toml
apps/swarm-fin-agent/src/: agents.py  main.py  tools.py
